recursion.cons.lessons.recursion.cons.AllDifferent.scala.error
allDifferent:4: error: type mismatch;
 found   : List[Int]
 required: List[Char]
else if (isMember(l.tail, l.head)) false
                    ^